--- a/style.css
+++ b/style.css
@@ -91,3 +91,8 @@ h2{
     block-size: 210px;
     color: wheat;
 }
+footer{
+    background-color: whitesmoke;
+    margin: 0%;
+    padding: 20px;
+}
